PostgreSQL #5 - implemented create user - added connection PostgreSQL, postgres router, docs swagger
