# internal/delivery/http/postgres_router.go
@@ -1,0 +1,79 @@
+package http
+
+import (
+	"ZenMobileService/internal/domain"
+	"errors"
+	"github.com/go-chi/chi"
+	"github.com/go-chi/render"
+	log "github.com/sirupsen/logrus"
+	"net/http"
+)
+
+const (
+	usersRoute = "/users"
+)
+
+var (
+	ErrEmptyName = errors.New("name can't be empty")
+)
+
+type UserCreateRequest struct {
+	Name string `json:"name"`
+	Age  uint8  `json:"age"`
+}
+
+type UserCreateResponse struct {
+	Id int `json:"id"`
+}
+
+func (h *Handler) initPostgresRoutes() *chi.Mux {
+	postgresRouter := chi.NewRouter()
+	postgresRouter.Post(usersRoute, h.CreateUser)
+	return postgresRouter
+}
+
+func validateCreateUserReq(reqCreateUser *UserCreateRequest) error {
+	if reqCreateUser.Name == "" {
+		return ErrEmptyName
+	}
+	return nil
+}
+
+// @Summary CreateUser
+// @Description Сreating a new user
+// @Tags Postgres
+// @Accept json
+// @Produce json
+// @Param input body UserCreateRequest true "json information user"
+// @Success 200 {object} UserCreateResponse
+// @Failure 400 {object} ErrResponse
+// @Router /postgres/users [post]
+func (h *Handler) CreateUser(w http.ResponseWriter, r *http.Request) {
+	userCreateRequest := &UserCreateRequest{}
+	userCreateResponse := &UserCreateResponse{}
+	user := domain.User{}
+	userId := 0
+	err := render.Decode(r, &userCreateRequest)
+	if err != nil {
+		log.Errorf("can't parse request: %s", err.Error())
+		render.Render(w, r, ErrInvalidRequest(ErrInvalidInput))
+		return
+	}
+
+	err = validateCreateUserReq(userCreateRequest)
+	if err != nil {
+		log.Errorf("bad request: %v: %s", userCreateRequest, err.Error())
+		render.Render(w, r, ErrInvalidRequest(err))
+		return
+	}
+	user.SetName(userCreateRequest.Name)
+	user.SetAge(userCreateRequest.Age)
+	userId, err = h.services.UsersService.CreateUser(r.Context(), user)
+	if err != nil {
+		render.Render(w, r, ErrInvalidRequest(err))
+		return
+	}
+	userCreateResponse.Id = userId
+	render.Status(r, http.StatusCreated)
+	render.JSON(w, r, userCreateResponse)
+}
